--- a/av-list.html
+++ b/av-list.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <title>我的女優作品集</title>
     </head>
 <body>
+    <meta charset="UTF-8">
     <h1>歡迎来到作品集</h1>
 
     <div class="actress-card">
