Fix HTML formatting and structure

--- a/av-list.html
+++ b/av-list.html
@@ -17,10 +17,11 @@
 
     <div class="actress-card">
         <a href="MukaiAi.html">
-            <img src="images/Muakiai.jpg" alt="向井藍">
+            <img src="images/Mukaiai.jpg" alt="向井藍">
             <h2>向井藍</h2>
         </a>
     </div>
 
     </body>
 </html>
+
