--- a/av-list.html
+++ b/av-list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
@@ -23,5 +23,6 @@
     </div>
 
     </body>
+
 </html>
 
