--- a/av-list.html
+++ b/av-list.html
@@ -9,14 +9,14 @@
 
     <div class="actress-card">
         <a href="SatsukiFumino.html">
-            <img src="images/Satsukifumino.jpg" alt="沙月ふみの">
+            <img src="images/Satsukifumino.jpg" alt="沙月ふみの" style="width:200px; height:auto;">
             <h2>沙月ふみの</h2>
         </a>
     </div>
 
     <div class="actress-card">
         <a href="MukaiAi.html">
-            <img src="images/Mukaiai.jpg" alt="向井藍">
+            <img src="images/Satsukifumino.jpg" alt="向井藍" style="width:200px; height:auto;">
             <h2>向井藍</h2>
         </a>
     </div>
@@ -24,6 +24,7 @@
     </body>
 
 </html>
+
 
 
 
