--- a/av-list.html
+++ b/av-list.html
@@ -16,7 +16,7 @@
 
     <div class="actress-card">
         <a href="MukaiAi.html">
-            <img src="images/Satsukifumino.jpg" alt="向井藍" style="width:200px; height:auto;">
+            <img src="images/Mukaiai.jpg" alt="向井藍" style="width:200px; height:auto;">
             <h2>向井藍</h2>
         </a>
     </div>
@@ -24,6 +24,7 @@
     </body>
 
 </html>
+
 
 
 
