--- a/av-list.html
+++ b/av-list.html
@@ -42,7 +42,41 @@
                 <h2>沙月ふみの</h2>
             </a>
         </div>
-
+        <div class="actress-card">
+            <a href="KatouTsubaki.html">
+                <img src="images/Katoutsubaki.jpg" alt="加藤ツバキ" style="width:200px; height:auto;">
+                <h2>加藤ツバキ</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="MoriyaYoshino.html">
+                <img src="images/Moriyayoshino.jpg" alt="守屋よしの" style="width:200px; height:auto;">
+                <h2>守屋よしの</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="MatsunagaAkari.html">
+                <img src="images/Matsunagaakari.jpg" alt="松永あかり" style="width:200px; height:auto;">
+                <h2>松永あかり</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="HoujyoMaki.html">
+                <img src="images/Houjyomaki.jpg" alt="北条麻妃" style="width:200px; height:auto;">
+                <h2>北条麻妃</h2>
+        </div>
+        <div class="actress-card">
+            <a href="SakamotoSumire.html">
+                <img src="images/Sakamotosumire.jpg" alt="坂本すみれ" style="width:200px; height:auto;">
+                <h2>坂本すみれ</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="YatsugakeUmi.html">
+                <img src="images/Yatsugakeumi.jpg" alt="八掛うみ" style="width:200px; height:auto;">
+                <h2>八掛うみ</h2>
+            </a>
+        </div>
         <div class="actress-card">
             <a href="MukaiAi.html">
                 <img src="images/Mukaiai.jpg" alt="向井藍" style="width:200px; height:auto;">
@@ -53,6 +87,7 @@
     </div>
     </body>
 </html>
+
 
 
 
