--- a/av-list.html
+++ b/av-list.html
@@ -82,11 +82,48 @@
                 <img src="images/Mukaiai.jpg" alt="向井藍" style="width:200px; height:auto;">
                 <h2>向井藍</h2>
             </a>
+        </div>       
+        <div class="actress-card">
+            <a href="NimiyaHikari.html">
+                <img src="images/Nimiyahikari.jpg" alt="二宮ひかり" style="width:200px; height:auto;">
+                <h2>二宮ひかり</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="AoiShino.html">
+                <img src="images/Aoishino.jpg" alt="碧しの" style="width:200px; height:auto;">
+                <h2>碧しの</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="MizutaniAoi.html">
+                <img src="images/Mizutaniaoi.jpg" alt="水谷あおい" style="width:200px; height:auto;">
+                <h2>水谷あおい</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="MiantoRiku.html">
+                <img src="images/Miantoriku.jpg" alt="湊莉久" style="width:200px; height:auto;">
+                <h2>湊莉久</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="MutouAyaka.html">
+                <img src="images/Mutouayaka.jpg" alt="武藤あやか" style="width:200px; height:auto;">
+                <h2>武藤あやか</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="MHonjyouYuuka.html">
+                <img src="images/Honjyouyuuka.jpg" alt="本庄優花" style="width:200px; height:auto;">
+                <h2>本庄優花</h2>
+            </a>
         </div>
 
     </div>
     </body>
 </html>
+
 
 
 
