--- a/av-list.html
+++ b/av-list.html
@@ -114,15 +114,88 @@
             </a>
         </div>
         <div class="actress-card">
-            <a href="MHonjyouYuuka.html">
+            <a href="HonjyouYuuka.html">
                 <img src="images/Honjyouyuuka.jpg" alt="本庄優花" style="width:200px; height:auto;">
                 <h2>本庄優花</h2>
             </a>
         </div>
-
+        <div class="actress-card">
+            <a href="AmanoTsubaki.html">
+                <img src="images/Amanotsubaki.jpg" alt="甘乃つばき" style="width:200px; height:auto;">
+                <h2>甘乃つばき</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="MorisawaKana.html">
+                <img src="images/Morisawakana.jpg" alt="森沢かな" style="width:200px; height:auto;">
+                <h2>森沢かな</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="NakanoArisa.html">
+                <img src="images/Nakanoarisa.jpg" alt="中野ありさ" style="width:200px; height:auto;">
+                <h2>中野ありさ</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="ShirosakiKyoka.html">
+                <img src="images/Shirosakikyoka.jpg" alt="城咲京花" style="width:200px; height:auto;">
+                <h2>城咲京花</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="NinomiyaWaka.html">
+                <img src="images/Ninomiyawaka.jpg" alt="二宮和香" style="width:200px; height:auto;">
+                <h2>二宮和香</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="KatouAyano.html">
+                <img src="images/Katouayano.jpg" alt="加藤あやの" style="width:200px; height:auto;">
+                <h2>加藤あやの</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="AmemuraRinka.html">
+                <img src="images/Amemurarinka.jpg" alt="雨村梨花" style="width:200px; height:auto;">
+                <h2>雨村梨花</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="MatsushitaSaeko.html">
+                <img src="images/Matsushitasaeko.jpg" alt="松下紗栄子" style="width:200px; height:auto;">
+                <h2>松下紗栄子</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="ShirakamiEmika.html">
+                <img src="images/Shirakamiemika.jpg" alt="白上咲花" style="width:200px; height:auto;">
+                <h2>白上咲花</h2>
+            </a>
+        </div>
+                <div class="actress-card">
+            <a href="MitoKana.html">
+                <img src="images/Mitokana.jpg" alt="水戸かな" style="width:200px; height:auto;">
+                <h2>水戸かな</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="HasegawaShiori.html">
+                <img src="images/Hasegawashiori.jpg" alt="長谷川栞" style="width:200px; height:auto;">
+                <h2>長谷川栞</h2>
+            </a>
+        </div>
+        <div class="actress-card">
+            <a href="AkariTsumugi.html">
+                <img src="images/Akaritsumugi.jpg" alt="明里つむぎ" style="width:200px; height:auto;">
+                <h2>明里つむぎ</h2>
+            </a>
+        </div>
+        
     </div>
     </body>
 </html>
+
 
 
 
