--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {
     justify-content: center;
     gap: 30px;
     padding: 50px 20px;
+    align-items: center;
 }
 
 /* 入口卡片的樣式 */
@@ -110,4 +111,5 @@ body {
     </footer>
 
 </body>
+
 </html>
